# openvds-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
context/: ARCHITECTURE.md  CLOUD_STORAGE.md  GITHUB_SETUP.md  QUICKSTART.md  STATUS.md
examples/: concurrent_loading.rs  custom_io_backend.md  seismic_volume.rs
src/: access.rs  compression.rs  error.rs  io.rs  layout.rs  lib.rs  metadata.rs  types.rs  utils.rs
tests/: osdu_integration_test.rs
