[package]
name = "openvds"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["OpenVDS Rust Contributors"]
license = "Apache-2.0"
description = "Pure Rust OpenVDS implementation - async I/O for multi-dimensional volumetric data with local filesystem support"
repository = "https://github.com/Querent-ai/openvds-rs"
keywords = ["seismic", "volumetric", "compression", "vds", "geophysics"]
categories = ["science", "compression", "filesystem"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Compression
flate2 = "1.0"  # For deflate/zip compression
zstd = "0.13"   # Modern compression

# HTTP client (optional for custom backends like OSDU)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
futures = "0.3"
parking_lot = "0.12"

# Math and array operations
ndarray = "0.15"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[features]
default = []
# HTTP client for custom cloud backends
http-client = ["reqwest"]

[lib]
name = "openvds"
path = "src/lib.rs"
